<resources>
    <string name="title_activity_store">BTT e-Com</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="android_version">Android Version</string>
    <string name="sdk_version">BTT SDK Version</string>
    <string name="app_version">App Version</string>
    <string name="app_flavor">App Flavor</string>
    <string name="site_id">Site ID</string>
    <string name="anr_enabled">ANR Detection</string>
    <string name="screen_tracking_enabled">Screen Tracking</string>
    <string name="session_id">Session ID</string>
    <string name="sessionid_accessibility">sessionid</string>
    <string name="test_manual_timer">Test Manual Timer</string>
    <string name="memory_warning_title">Memory Warning</string>
    <string name="memory_warning_message">Memory warning received. Your app is using too much memory than expected.</string>
    <string name="memory_warning_ok">OK</string>
    <string name="ip_address">192.168.0.106</string>
    <string name="title_activity_compose_about">ComposeAboutActivity</string>
    <string name="hybrid_demo">Hybrid Demo</string>
    <string name="done">Done</string>
    <string name="tag_url">Change Tag URL</string>
    <string name="copy">Copy</string>
    <string name="configuration">Configuration</string>
    <string name="keep_default_configurations">Keep Default Configurations</string>
    <string name="launch_time">Launch Time</string>
    <string name="screen_tracking">Screen Tracking</string>
    <string name="crash_tracking">Crash Tracking</string>
    <string name="anr_tracking">ANR Tracking</string>
    <string name="memory_warning">Memory Warning</string>
    <string name="network_state_tracking">Network State Tracking</string>
    <string name="network_capturing">Network Capturing</string>
    <string name="performance_monitoring">Performance Monitoring</string>
    <string name="apply">Apply</string>
    <string name="configuration_settings">Configuration Settings</string>
    <string name="configure_on_launch">Configure on Launch</string>
    <string name="add_delay">Add Delay</string>
    <string name="launch_configuration">Launch Configuration</string>
    <string name="test_brand_value">Test Brand Value</string>

    <string name="a11y_intro_prev">intro prev</string>
    <string name="a11y_intro_next">intro next</string>
    <string name="a11y_intro_done">intro done</string>

    <string name="a11y_btt_session_id">btt session id</string>
    <string name="a11y_add_to_cart">add to cart</string>
    <string name="a11y_checkout">checkout</string>
    <string name="a11y_continue_shopping">continue shopping</string>
    <string name="a11y_back">back</string>
    <string name="a11y_cart_item_remove">btn_remove</string>

    <string name="a11y_config_default_configuration">switch_default</string>
    <string name="a11y_config_screen_tracking">switch_screen_tracking</string>
    <string name="a11y_config_launch_time">switch_launch_time</string>
    <string name="a11y_config_performance_monitoring">switch_performance_monitor</string>
    <string name="a11y_config_crash_tracking">switch_crash</string>
    <string name="a11y_config_anr_tracking">switch_ANR</string>
    <string name="a11y_config_memory_warning">switch_memory_warning</string>
    <string name="a11y_config_network_capturing">switch_network_capture</string>
    <string name="a11y_config_network_state_tracking">switch_network_state</string>
    <string name="a11y_config_configure_on_launch">switch_config_on_launch</string>
    <string name="a11y_config_add_delay">switch_add_delay</string>
    <string name="a11y_config_apply">configure_apply</string>

    <string name="a11y_configuration_settings">btn_configuration_settings</string>
    <string name="a11y_username_field">fld_user_name</string>
    <string name="a11y_password_field">fld_password</string>
    <string name="a11y_email_field">fld_email</string>
    <string name="a11y_login_button">btn_login</string>
    <string name="a11y_signup_button">btn_signup</string>
    <string name="a11y_tab_signup">tab_sign_up</string>
    <string name="a11y_tab_login">tab_login</string>
    <string name="a11y_chip_normal">chip_normal</string>
    <string name="a11y_chip_premium">chip_premium</string>


    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="premium">Premium</string>
    <string name="normal">Normal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_ecom_demo_app">Welcome to \nEcom Demo App</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="skip">skip</string>
    <string name="title_activity_app_intro_compose">AppIntroComposeActivity</string>
    <string name="about_app">About App</string>
    <string name="ok">Ok</string>
    <string name="close">close</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>

</resources>