<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">

    <navigation
        android:id="@+id/navigation_products"
        app:startDestination="@id/navigation_products_list">

        <fragment
            android:id="@+id/navigation_products_list"
            android:name="com.bluetriangle.bluetriangledemo.ui.products.ProductsFragment"
            android:label="@string/title_products"
            tools:layout="@layout/fragment_products">
            <action
                android:id="@+id/action_product_list_to_product_detail"
                app:destination="@id/navigation_product_detail" />

        </fragment>

        <fragment
            android:id="@+id/navigation_product_detail"
            android:name="com.bluetriangle.bluetriangledemo.ui.products.ProductDetailFragment"
            android:label="Product Detail"
            tools:layout="@layout/fragment_product_detail">
            <argument
                android:name="product"
                app:argType="com.bluetriangle.bluetriangledemo.data.Product" />
        </fragment>
    </navigation>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.bluetriangle.bluetriangledemo.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bluetriangle.bluetriangledemo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>